# kagi-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  npm-publish.yml  release.yml  security.yml
docs/: .mintignore  SKILL.md  api-coverage.md  demos.md  docs.json  handoff.md  index.mdx  llms.txt  release-runbook.md  skill.md  todo.md
docs/commands/: ask-page.mdx  assistant.mdx  auth.mdx  bang.mdx  enrich.mdx  fastgpt.mdx  lens.mdx  news.mdx  quick.mdx  redirect.mdx  search.mdx  smallweb.mdx  summarize.mdx  translate.mdx
docs/guides/: advanced-usage.mdx  ai-native.mdx  authentication.mdx  installation.mdx  quickstart.mdx  troubleshooting.mdx  workflows.mdx
docs/project/: contributing.mdx  demos.mdx  development.mdx  support.mdx
docs/reference/: auth-matrix.mdx  coverage.mdx  error-reference.mdx  output-contract.mdx
npm/: README.md  package.json
npm/lib/: install.cjs
packaging/homebrew/Formula/: kagi.rb
packaging/scoop/: kagi.json
project/: demos.mdx  readme-option-1-docs-first.md  readme-option-2-quickstart-first.md  readme-option-3-automation-first.md  readme-option-4-subscriber-first.md  readme-option-5-open-source-balanced.md
scripts/: demo-ask-page.sh  demo-assistant-custom.sh  demo-assistant.sh  demo-bang-custom.sh  demo-lens.sh  demo-news.sh  demo-quick.sh  demo-redirect.sh  demo-search.sh  demo-summarize.sh  demo-translate.sh  install.ps1
src/: api.rs  auth.rs  auth_wizard.rs  cli.rs  error.rs  http.rs  main.rs  parser.rs  quick.rs  search.rs  types.rs
tests/: integration-cli.rs
