[package]
name = "kagi"
version = "0.1.6"
edition = "2024"
description = "Agent-native CLI for Kagi subscribers with JSON-first search output"
license = "MIT"
repository = "https://github.com/Microck/kagi-cli"
homepage = "https://github.com/Microck/kagi-cli"
documentation = "https://github.com/Microck/kagi-cli#readme"
readme = "README.md"
keywords = ["kagi", "search", "cli", "terminal", "json"]
categories = ["command-line-utilities"]
exclude = [
  ".artifacts/*",
  ".bg-shell/*",
  ".env",
  ".gsd/*",
  ".kagi.toml",
  "README_OUTLINE.md",
  "opensrc/*",
  "target/*",
  "website/*",
]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
toml = "1.0.6"
