[package]
name = "kagi"
version = "0.4.1"
edition = "2024"
description = "Agent-native CLI for Kagi subscribers with JSON-first search output"
license = "MIT"
repository = "https://github.com/Microck/kagi-cli"
homepage = "https://github.com/Microck/kagi-cli"
documentation = "https://github.com/Microck/kagi-cli#readme"
readme = "README.md"
keywords = ["kagi", "search", "cli", "terminal", "json"]
categories = ["command-line-utilities"]
exclude = [
  ".artifacts/*",
  ".bg-shell/*",
  ".env",
  ".gsd/*",
  ".kagi.toml",
  "README_OUTLINE.md",
  "opensrc/*",
  "target/*",
  "website/*",
]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
cliclack = "0.5.2"
console = "0.16.3"
ctrlc = "3.5.2"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
toml = "1.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3.27.0"
